--- a/environment.yml
+++ b/environment.yml
@@ -8,8 +8,8 @@ dependencies:
 - rasterio
 - pip
 - pip:
-  - earthkit@git+https://github.com/ecmwf/earthkit@feature/import-resilience
   - ecmwflibs
-  - earthkit-data
+  - earthkit@git+https://github.com/ecmwf/earthkit@feature/import-resilience
+  - earthkit-data@git+https://github.com/ecmwf/earthkit-data@develop
   - earthkit-climate
   - earthkit-maps
